force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Cloned_Lines__c.field-meta.xml
<CustomField>
    <fullName>NF_Cloned_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned Lines</label>
    <type>Checkbox</type>
</CustomField>