force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Escalateable__c.field-meta.xml
<CustomField>
    <fullName>NF_Escalateable__c</fullName>
    <formula>SBQQ__Product__r.NF_Escalateable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escalateable</label>
    <type>Checkbox</type>
</CustomField>