force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Group_Segment_Index_Changed__c.field-meta.xml
<CustomField>
    <fullName>NF_Group_Segment_Index_Changed__c</fullName>
    <label>Group Segment Index Changed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>