force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Group_Segment_Index_Formula__c.field-meta.xml
<CustomField>
    <fullName>NF_Group_Segment_Index_Formula__c</fullName>
    <formula>TEXT(SBQQ__Group__r.NF_Group_Segment_Index__c)</formula>
    <label>Group Segment Index Formula</label>
    <type>Text</type>
</CustomField>