force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>NF_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>