force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Override_Price__c.field-meta.xml
<CustomField>
    <fullName>NF_Override_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Price</label>
    <type>Checkbox</type>
</CustomField>