force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Quote_Escalation__c.field-meta.xml
<CustomField>
    <fullName>NF_Quote_Escalation__c</fullName>
    <label>Quote Escalation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>