force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Quote_Line_Group_End_Date__c.field-meta.xml
<CustomField>
    <fullName>NF_Quote_Line_Group_End_Date__c</fullName>
    <formula>IF(
NOT(ISBLANK(SBQQ__Group__r.SBQQ__SubscriptionTerm__c)),
SBQQ__Group__r.NF_True_End_Date__c,
SBQQ__Group__r.SBQQ__EndDate__c
)</formula>
    <label>Quote Line Group End Date</label>
    <type>Date</type>
</CustomField>