force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NF_Renewal_Escalation_Set__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Escalation_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set in Price Rule to indicate that Escalation has been set to prevent Price Rule from updating or User Makes subsequent changes</description>
    <label>Renewal Escalation Set</label>
    <type>Checkbox</type>
</CustomField>